Agrego partials handlebars para renderizar vistas

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -32,7 +32,7 @@
       </div>
   
       <button class="navbar__button" href="login">
-        <a href="login.html">Login</a>
+        <a href="/login">Login</a>
       </button>
      </nav>
 
