--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,8 +20,8 @@
     {{!-- //NAVBAR --}}
     {{> navbar}}
 
-
-    <section>
+<main>
+    <section class="login">
         <div class="login__container" id="login">
             <h1 class="login__title">Iniciar Sección</h1>
             <div class="login__input--container">
@@ -32,6 +32,9 @@
             <button class="login__button">Entrar</button>
         </div>
     </section>
+
+</main>
+    
 
     {{!-- //Footer --}}
     {{> footer}}
