--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -10,6 +10,7 @@
     box-sizing: content-box;
     display: flex;
     flex-wrap: wrap;
+    gap: 32px;
     justify-content: center;
     max-width: 1136px;
     margin: 0 auto;
@@ -19,8 +20,6 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 8px;
-    width: 100%;
 }
 
 .footer__contact--input{
@@ -90,20 +89,24 @@
     }
 
     .footer__contact{
-        width: 100%;
+        width: 436px;
+        flex-grow: 1;
     }
 
     .footer__description{
         gap: 16px;
-        width: 100%;
+    }
+
+    .footer__logo{
+        justify-content: initial;
     }
 
     .footer__options{
+        align-items: normal;
         width: 100%;
     }
 
     .footer__package{
-        flex-direction: column;
         gap: 16px;
     }
 
@@ -116,10 +119,12 @@
 
     .footer__contact{
         width: 560px;
+        
     }
-
     .footer__description{
+        flex-wrap: nowrap;
         gap: 112px;
+        width: 100%;
     }
 
     .footer__options{
@@ -129,5 +134,6 @@
     .footer__package{
         flex-direction: row;
         gap: 112px;
+        
     }
 }
