--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,23 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ titulo }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-   
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="./assets/slick/slick-theme.css">
-    <link rel="stylesheet" href="./assets/slick/slick.css">
-    <link rel="stylesheet" href="./css/icons.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/cards.css">
-    <link rel="stylesheet" href="./css/footer.css">
-    
-    
-</head>
+
+ {{!-- //Head  --}}
+  {{> head}}
+
 <body>
     {{!-- //NAVBAR --}}
     {{> navbar}}
@@ -30,7 +16,7 @@
     <main class="main__container">
       <div class="container__name">
         <span class="container__title">Consolas</span>
-        <a class="card__link" href="#">Ver todo <img src="./assets/fonts/arrow_back_black_24dp 1.svg" alt=""></a>
+        <a class="card__link" href="/products">Ver todo <img src="./assets/fonts/arrow_back_black_24dp 1.svg" alt=""></a>
       </div>
       <section class="your-class">
         <div>
