--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,21 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{titulo}}</title>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="./assets/slick/slick-theme.css">
-    <link rel="stylesheet" href="./assets/slick/slick.css">
-    <link rel="stylesheet" href="./css/icons.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/cards.css">
-    <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="css/login.css">
 
-</head>
+{{!-- //Head  --}}
+    {{> head}}
+    
 <body>
     {{!-- //NAVBAR --}}
     {{> navbar}}
