--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <header class="header__container">
-    <img class="header__img" src="./assets/img/boukaih-FdyzI_X38Yw-unsplash.jpg" alt="">
+    <img class="header__img" src="./assets/img/mario.jpg" alt="">
     <div class="header__description">
         <h1 class="header__title">Febrero Promocional</h1>
         <h2>Productos seleccionados con 33% de descuento</h2>
