--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,11 +3,13 @@
     <img class="navbar__img" src="./assets/img/Logo.svg" alt="">
     <div class="navbar__input">
         <input class="navbar__input--container" type="text" placeholder="¿Qué deseas buscar?">
-        <i class="icon-Icone"></i>
+        <i>
+            <img src="./assets/fonts/icon-busqueda.png" alt="">
+        </i>
     </div>
     </div>
 
-    <button class="navbar__button">
-    <a href="/login">Login</a>
-    </button>
+    <a href="/login" class="navbar__button">
+        Login
+    </a>
 </nav>
