Agrego imagenes para las diferentes categorias de la pagina

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -14,6 +14,105 @@
     
 
     <main class="main__container">
+       <div class="container__name">
+        <span class="container__title">Mario Bros</span>
+        <a class="card__link" href="/products">Ver todo</a>
+      </div>
+      <section class="your-class">
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/1234.jpg" alt="">
+                <h4>13 USD</h4>
+                <p>SATZIG 3 piezas de Mario Toys</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/5678.jpg" alt="">
+                <h4>28 USD</h4>
+                <p>Figura de acción Bowser de 7 pulgadas.</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/71WHgAryJaL.jpg" alt="">
+                <h4>31 USD</h4>
+                <p>Paquete de 6 figuras de acción de Mario Toys</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/71+uiRV7lGL.jpg" alt="">
+                <h4>18 USD</h4>
+                <p>Figura de acción magikoopa con accesorio de varita</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/51rB9mrzO5L.jpg" alt="">
+                <h4>14 USD</h4>
+                <p>Figura de acción Boo World of Nintendo</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/81CkgXlS8XL.jpg" alt="">
+                <h4>20 USD</h4>
+                <p>Radio juguete de largo alcance</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/81jEBlaSWQL.jpg" alt="">
+                <h4>20 USD</h4>
+                <p>Princesa Peach con paraguas</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/71LlfjTJiRL.jpg" alt="">
+                <h4>10 USD</h4>
+                <p>Figura de Mario Bros</p>
+            </div>
+          </a>
+        </div>
+        
+         <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/61JDcd02yCL.jpg" alt="">
+                <h4>15 USD</h4>
+                <p>Yoshi con accesorio de sarten</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-mario/41CKAeCVJTL.jpg" alt="">
+                <h4>15 USD</h4>
+                <p>Bomba de juquete coleccionable</p>
+            </div>
+          </a>
+        </div>
+      </section>
+
+
       <div class="container__name">
         <span class="container__title">Consolas</span>
         <a class="card__link" href="/products">Ver todo <img src="./assets/fonts/arrow_back_black_24dp 1.svg" alt=""></a>
@@ -22,194 +121,189 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/unsplash_0POwK6iAiRQ.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/41W5CxtCsgL.webp" alt="">
+                <h4>215 USD</h4>
+                <p>Nintendo Switch with Neon Blue and Neon Red</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/unsplash_caNzzoxls8Q.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/51OnenSqevL.jpg" alt="">
+                <h4>350 USD</h4>
+                <p>Play Statio PS4 black</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/unsplash_k-xYhI3-gJM.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/61VeVFjD0hL.jpg" alt="">
+                <h4>160 USD</h4>
+                <p>Consola de juegos, bateria incorporada</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/unsplash_wa5z9o9fgjw.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/61pETE6v4vL.jpg" alt="">
+                <h4>150 USD</h4>
+                <p>Sony play station 2 console black</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/unsplash_Zjn4dT993-g.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/61hczff9SjL.jpg" alt="">
+                <h4>187 USD</h4>
+                <p>RG405M Retro Game Player Android 12</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/unsplash_ZV7lnfyQLmA.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/71unFU3zqpL.jpg" alt="">
+                <h4>30 USD</h4>
+                <p>Consola de juegos portatil 500 juegos</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/unsplash_0POwK6iAiRQ.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/61gndBOP9zS.jpg" alt="">
+                <h4>167 USD</h4>
+                <p>Nintendo Switch Lite - Blue</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/unsplash_caNzzoxls8Q.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
-            </div>
-          </a>
-        </div>
-      </section>
-
-      <div class="container__name">
-        <span class="container__title">Consolas</span>
-        <a class="card__link" href="#">Ver todo</a>
-      </div>
-      <section class="your-class">
-        <div>
-          <a href="" class="card__container">
-            <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_0POwK6iAiRQ.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/61RVryJZMEL.jpg" alt="">
+                <h4>10 USD</h4>
+                <p>Nintendo eShop Gift Card</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_caNzzoxls8Q.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/71YNm35y1OL.jpg" alt="">
+                <h4>30 USD</h4>
+                <p>Controlador inhalambrico para Switch</p>
             </div>
           </a>
         </div>
-        <div>
+         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_k-xYhI3-gJM.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
-            </div>
-          </a>
-        </div>
-        <div>
-          <a href="" class="card__container">
-            <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_wa5z9o9fgjw.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
-            </div>
-          </a>
-        </div>
-        <div>
-          <a href="" class="card__container">
-            <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_Zjn4dT993-g.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
-            </div>
-          </a>
-        </div>
-        <div>
-          <a href="" class="card__container">
-            <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_ZV7lnfyQLmA.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-consola/71ZKhvqOD4L.jpg" alt="">
+                <h4>45 USD</h4>
+                <p>Controlador para interruptor</p>
             </div>
           </a>
         </div>
       </section>
 
+     
+
       <div class="container__name">
-        <span class="container__title">Consolas</span>
-        <a class="card__link" href="#">Ver todo</a>
+        <span class="container__title">Juegos de mesa</span>
+        <a class="card__link" href="/products">Ver todo</a>
       </div>
       <section class="your-class">
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_0POwK6iAiRQ.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-juegos/81l3EHcpx.jpg" alt="">
+                <h4>15 USD</h4>
+                <p>Monopoly the super mario bros</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_caNzzoxls8Q.png" alt="">
+                <img class="card__img" src="./assets/img/cards/cards-juegos/911SqgtiaCL.jpg" alt="">
                 <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <p>Torre de equilibrio</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_k-xYhI3-gJM.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-juegos/61uaDJP8RVL.jpg" alt="">
+                <h4>22 USD</h4>
+                <p>Juedo de la vida edicion super mario bros</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_wa5z9o9fgjw.png" alt="">
+                <img class="card__img" src="./assets/img/cards/cards-juegos/91X927mjSHL.jpg" alt="">
                 <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <p>Pop Up Super Mario</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_Zjn4dT993-g.png" alt="">
-                <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <img class="card__img" src="./assets/img/cards/cards-juegos/61fw-NBsv6L.jpg" alt="">
+                <h4>21 USD</h4>
+                <p>USAOPOLY- Juego de damas Super Mario</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="Assets/img/consola/unsplash_ZV7lnfyQLmA.png" alt="">
+                <img class="card__img" src="./assets/img/cards/cards-juegos/71ZayoGQh8L.jpg" alt="">
+                <h4>25 USD</h4>
+                <p>Juego de memoria Super Mario Brothers</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-juegos/81Ql95DpYJL.jpg" alt="">
+                <h4>10 USD</h4>
+                <p>UNO Juego de cartas Super Mario</p>
+            </div>
+          </a>
+        </div>
+         <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-juegos/81lcVW+3j1L.jpg" alt="">
                 <h4>13 USD</h4>
-                <p>Producto XYZ</p>
+                <p>Planta piraña escape Super Mario</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-juegos/71V8uKRau8L.jpg" alt="">
+                <h4>23 USD</h4>
+                <p>Juego de pares de fotos</p>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="" class="card__container">
+            <div class="card__container--description">
+                <img class="card__img" src="./assets/img/cards/cards-juegos/71RNHGRHGLL.jpg" alt="">
+                <h4>36 USD</h4>
+                <p>Tic Tae Toe</p>
             </div>
           </a>
         </div>
