--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,7 +2,8 @@
     <img class="header__img" src="./assets/img/mario.jpg" alt="">
     <div class="header__description">
         <h1 class="header__title">Febrero Promocional</h1>
-        <h2>Productos seleccionados con 33% de descuento</h2>
-        <button class="header__description--button">Ver Consolas</button>
+        <h2 class="header__title2">Productos seleccionados con 33% de descuento</h2>
+        <a href="" class="header__description--button">Ver consolas</a>
+
     </div>
 </header>
