--- a/public/assets/slick/slick-theme.css
+++ b/public/assets/slick/slick-theme.css
@@ -89,6 +89,7 @@
 .slick-prev:before
 {
     content: '←';
+    color: red;
 }
 [dir='rtl'] .slick-prev:before
 {
@@ -107,7 +108,7 @@
 .slick-next:before
 {
     content: '→';
-    color: blue;
+    color: red;
 }
 [dir='rtl'] .slick-next:before
 {
