--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -1,5 +1,5 @@
 .main__container{
-    background: #F5F5F5;
+    
     box-sizing: content-box;
     max-width: 1136px;
     margin: 0 auto;
@@ -51,6 +51,7 @@
 
 .card__img{
     width: 100%;
+    height: 159.19px;
 }
 
 
