--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,7 +4,7 @@
 }
 
 .header__img{
-    height: 352px;
+    height: 192px;
     object-fit: cover;
     width: 100%;
 }
@@ -28,19 +28,51 @@
 }
 
 .header__description--button{
+    align-items: center;
     background: #2A7AE4;
     border: 1px solid #2A7AE4;
     color: #FFF;
+    display: flex;
     font-size: 16px;
     font-weight: 400;
-    width: 129px;
-    padding: 16px;
+    justify-content: center;
+    overflow: hidden;
+    padding: 12px 16px;
+    position: relative;
+    transition: 0.3s;
+    transition-delay: 0.3s;
+    text-decoration: none;
+    width: 118px;
+    z-index: 1;
 }
+
+.header__description--button::before{
+    background:#FFF;
+    border-radius: 50%;
+    content: "";
+    height: 200%;
+    position: absolute;
+    top: -100px;
+    transition: 0.3s;
+    width: 150%;
+    z-index: -1;
+}
+.header__description--button:hover {
+    color: #2A7AE4; 
+}
+  
+.header__description--button:hover::before {
+    top: -20px;
+} 
+
 
 .header__title{
-    font-size: 52px;
+    font-size: 22px;
 }
 
+.header__title2{
+    font-size: 14px;
+}
 
 @media screen and (min-width:768px) {
     .header__description{
@@ -52,6 +84,23 @@
     .header__description{
         bottom: 32px;
         padding: 0;
+    }
+
+    .header__description--button{
+        width: 129px;
+        padding: 16px;
+    }
+
+    .header__img{
+        height: 352px;
+    }
+
+    .header__title{
+        font-size: 52px;
+    }
+    
+    .header__title2{
+        font-size: 22px;
     }
 }
 
