--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,9 @@
   justify-content: center;
 }
 
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  color: black;
+  font-size: 24px;
+  height: 24px;
+}
+
