--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,13 +16,13 @@
     <main class="main__container">
        <div class="container__name">
         <span class="container__title">Mario Bros</span>
-        <a class="card__link" href="/products">Ver todo</a>
+        <a class="card__link" href="/products-toys">Ver todo</a>
       </div>
       <section class="your-class">
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/1234.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-mario/1234.jpg" alt="">
                 <h4>13 USD</h4>
                 <p>SATZIG 3 piezas de Mario Toys</p>
             </div>
@@ -31,7 +31,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/5678.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-mario/5678.jpg" alt="">
                 <h4>28 USD</h4>
                 <p>Figura de acción Bowser de 7 pulgadas.</p>
             </div>
@@ -40,7 +40,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/71WHgAryJaL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-mario/71WHgAryJaL.jpg" alt="">
                 <h4>31 USD</h4>
                 <p>Paquete de 6 figuras de acción de Mario Toys</p>
             </div>
@@ -49,7 +49,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/71+uiRV7lGL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-mario/71+uiRV7lGL.jpg" alt="">
                 <h4>18 USD</h4>
                 <p>Figura de acción magikoopa con accesorio de varita</p>
             </div>
@@ -58,7 +58,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/51rB9mrzO5L.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-mario/51rB9mrzO5L.jpg" alt="">
                 <h4>14 USD</h4>
                 <p>Figura de acción Boo World of Nintendo</p>
             </div>
@@ -67,7 +67,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/81CkgXlS8XL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-mario/81CkgXlS8XL.jpg" alt="">
                 <h4>20 USD</h4>
                 <p>Radio juguete de largo alcance</p>
             </div>
@@ -76,7 +76,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/81jEBlaSWQL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-mario/81jEBlaSWQL.jpg" alt="">
                 <h4>20 USD</h4>
                 <p>Princesa Peach con paraguas</p>
             </div>
@@ -85,7 +85,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/71LlfjTJiRL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-mario/71LlfjTJiRL.jpg" alt="">
                 <h4>10 USD</h4>
                 <p>Figura de Mario Bros</p>
             </div>
@@ -95,7 +95,7 @@
          <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/61JDcd02yCL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-mario/61JDcd02yCL.jpg" alt="">
                 <h4>15 USD</h4>
                 <p>Yoshi con accesorio de sarten</p>
             </div>
@@ -104,8 +104,8 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-mario/41CKAeCVJTL.jpg" alt="">
-                <h4>15 USD</h4>
+                <img class="card__img" src="assets/img/cards/cards-mario/41CKAeCVJTL.jpg" alt="">
+                <h4>35 USD</h4>
                 <p>Bomba de juquete coleccionable</p>
             </div>
           </a>
@@ -115,13 +115,13 @@
 
       <div class="container__name">
         <span class="container__title">Consolas</span>
-        <a class="card__link" href="/products">Ver todo <img src="./assets/fonts/arrow_back_black_24dp 1.svg" alt=""></a>
+        <a class="card__link" href="/products-game_console">Ver todo <img src="assets/fonts/arrow_back_black_24dp 1.svg" alt=""></a>
       </div>
       <section class="your-class">
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/41W5CxtCsgL.webp" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/41W5CxtCsgL.webp" alt="">
                 <h4>215 USD</h4>
                 <p>Nintendo Switch with Neon Blue and Neon Red</p>
             </div>
@@ -130,7 +130,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/51OnenSqevL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/51OnenSqevL.jpg" alt="">
                 <h4>350 USD</h4>
                 <p>Play Statio PS4 black</p>
             </div>
@@ -139,7 +139,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/61VeVFjD0hL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/61VeVFjD0hL.jpg" alt="">
                 <h4>160 USD</h4>
                 <p>Consola de juegos, bateria incorporada</p>
             </div>
@@ -148,7 +148,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/61pETE6v4vL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/61pETE6v4vL.jpg" alt="">
                 <h4>150 USD</h4>
                 <p>Sony play station 2 console black</p>
             </div>
@@ -157,7 +157,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/61hczff9SjL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/61hczff9SjL.jpg" alt="">
                 <h4>187 USD</h4>
                 <p>RG405M Retro Game Player Android 12</p>
             </div>
@@ -166,7 +166,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/71unFU3zqpL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/71unFU3zqpL.jpg" alt="">
                 <h4>30 USD</h4>
                 <p>Consola de juegos portatil 500 juegos</p>
             </div>
@@ -175,7 +175,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/61gndBOP9zS.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/61gndBOP9zS.jpg" alt="">
                 <h4>167 USD</h4>
                 <p>Nintendo Switch Lite - Blue</p>
             </div>
@@ -184,7 +184,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/61RVryJZMEL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/61RVryJZMEL.jpg" alt="">
                 <h4>10 USD</h4>
                 <p>Nintendo eShop Gift Card</p>
             </div>
@@ -193,7 +193,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/71YNm35y1OL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/71YNm35y1OL.jpg" alt="">
                 <h4>30 USD</h4>
                 <p>Controlador inhalambrico para Switch</p>
             </div>
@@ -202,7 +202,7 @@
          <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-consola/71ZKhvqOD4L.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-consola/71ZKhvqOD4L.jpg" alt="">
                 <h4>45 USD</h4>
                 <p>Controlador para interruptor</p>
             </div>
@@ -214,13 +214,13 @@
 
       <div class="container__name">
         <span class="container__title">Juegos de mesa</span>
-        <a class="card__link" href="/products">Ver todo</a>
+        <a class="card__link" href="/products-board_game">Ver todo</a>
       </div>
       <section class="your-class">
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/81l3EHcpx.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/81l3EHcpx.jpg" alt="">
                 <h4>15 USD</h4>
                 <p>Monopoly the super mario bros</p>
             </div>
@@ -229,7 +229,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/911SqgtiaCL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/911SqgtiaCL.jpg" alt="">
                 <h4>13 USD</h4>
                 <p>Torre de equilibrio</p>
             </div>
@@ -238,16 +238,16 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/61uaDJP8RVL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/61uaDJP8RVL.jpg" alt="">
                 <h4>22 USD</h4>
-                <p>Juedo de la vida edicion super mario bros</p>
+                <p>Juego de la vida edicion super mario bros</p>
             </div>
           </a>
         </div>
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/91X927mjSHL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/91X927mjSHL.jpg" alt="">
                 <h4>13 USD</h4>
                 <p>Pop Up Super Mario</p>
             </div>
@@ -256,7 +256,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/61fw-NBsv6L.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/61fw-NBsv6L.jpg" alt="">
                 <h4>21 USD</h4>
                 <p>USAOPOLY- Juego de damas Super Mario</p>
             </div>
@@ -265,7 +265,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/71ZayoGQh8L.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/71ZayoGQh8L.jpg" alt="">
                 <h4>25 USD</h4>
                 <p>Juego de memoria Super Mario Brothers</p>
             </div>
@@ -274,7 +274,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/81Ql95DpYJL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/81Ql95DpYJL.jpg" alt="">
                 <h4>10 USD</h4>
                 <p>UNO Juego de cartas Super Mario</p>
             </div>
@@ -283,7 +283,7 @@
          <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/81lcVW+3j1L.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/81lcVW+3j1L.jpg" alt="">
                 <h4>13 USD</h4>
                 <p>Planta piraña escape Super Mario</p>
             </div>
@@ -292,7 +292,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/71V8uKRau8L.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/71V8uKRau8L.jpg" alt="">
                 <h4>23 USD</h4>
                 <p>Juego de pares de fotos</p>
             </div>
@@ -301,7 +301,7 @@
         <div>
           <a href="" class="card__container">
             <div class="card__container--description">
-                <img class="card__img" src="./assets/img/cards/cards-juegos/71RNHGRHGLL.jpg" alt="">
+                <img class="card__img" src="assets/img/cards/cards-juegos/71RNHGRHGLL.jpg" alt="">
                 <h4>36 USD</h4>
                 <p>Tic Tae Toe</p>
             </div>
