--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,9 +3,7 @@
     <img class="navbar__img" src="./assets/img/Logo.svg" alt="">
     <div class="navbar__input">
         <input class="navbar__input--container" type="text" placeholder="¿Qué deseas buscar?">
-        <i>
-            <img src="./assets/fonts/icon-busqueda.png" alt="">
-        </i>
+        <i class="icon-Icone"></i>
     </div>
     </div>
 
