--- a/public/css/products.css
+++ b/public/css/products.css
@@ -31,7 +31,7 @@
 }
 
 .controls__delete:hover{
-    background: #2A7AE4;
+    color: #2A7AE4;
     transform: scale(1.1);
 }
 
@@ -40,7 +40,7 @@
 }
 
 .controls__edit:hover{
-    background: #2A7AE4;
+    color: #2A7AE4;
     transform: scale(1.1);
 }
 
